Fix horizontal blocks with bonus collapsing functionality from Foundation theme.

--- a/scss/moodleupgradechanges.scss
+++ b/scss/moodleupgradechanges.scss
@@ -10,3 +10,24 @@
 .breadcrumb > li > .divider {
     padding-left: 4px;
 }
+
+// MDL-57305 - thanks to Daniel Miericke.
+.block {
+    .block-action {
+        @include fa-icon();
+        cursor: pointer;
+        float: right;
+        margin: .2rem .6rem 0 0;
+        &:before {
+            content: $fa-var-compress;
+        }
+    }
+    &.hidden {
+        .block-action:before {
+            content: $fa-var-expand;
+        }
+        .card-text {
+            display: none;
+        }
+    }
+}
